--- a/style.css
+++ b/style.css
@@ -1,6 +1,28 @@
 #main{
     text-align: center;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    width:50%;
+    text-align: center;
+    margin: 0 auto 0 auto;
 }
 #nav{
     text-align: center;
+    background-color: black;
+    width: 50%;
+    border-radius: 10px;
+    margin: 0 auto 0 auto;
+    margin-top: 10px;
+    color: white;
+}
+
+#footer{
+    text-align: center;
+    margin:0 auto 0 auto;
+    margin-bottom: 10px;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    width:50%
 }
