--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     text-align: center;
     background-color: rgba(255,255,255,1);
     color: #000000;
-    border-radius: 0px;
+    border-radius: 2gx;
     width:97%;
     margin: 0 auto 0 auto;
     padding: 5px;
@@ -19,7 +19,7 @@ body{
     margin: 0 auto 0 auto;
     font-family:'Product Sans Regular';
     font-weight:normal;
-    font-size: 22px;
+    font-size: 20px;
     padding: 4px;
 }
 
