--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     text-align: center;
     background-color: rgba(255,255,255,1);
     color: #000000;
-    border-radius: 2gx;
+    border-radius: 2px;
     width:97%;
     margin: 0 auto 0 auto;
     padding: 5px;
