--- a/style.css
+++ b/style.css
@@ -77,23 +77,29 @@ body {
 }
 
 @media only screen and (max-width: 620px) {
+    body {
+        padding: 0px;
+    }
     #myInput {
         height:50px;
-        font-size: 19px;
     }
     #myUL li a {
-        font-size: 18px;
+        padding: 5px;
     }
     #header {
         flex-direction: column;
         align-items: center;
+        padding-top: 10px;
+
     }
     #display {
-        margin-left: 0;
-        margin-top: 20px;
+        display: block;
+        margin-left: 0 auto;
+        margin-right: 0 auto;
+        text-align: center;
+
     }
 }
-
 .navbar {
     text-align: center;
     margin: 0 auto;
