--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: 'Product Sans';
+    src: url('fonts/Product Sans/ProductSans-Regular.woff') format('woff');
+    /* Add other font styles as needed */
+}
+
+*{
+    font-family: 'Product Sans', sans-serif;
+}
+
 body {
     background-color: #262626;
     padding: 20px; /* Add padding to the body */
@@ -25,8 +35,7 @@ body {
 }
 
 #display {
-        color: white;
-
+    color: white;
     text-align: center;
     display: none;
     width: 40%;
@@ -86,6 +95,32 @@ body {
     width: 100%;
     font-family: Arial, sans-serif;
     border-radius: 3px;
+}
+
+/* Additional Checkbox Styles */
+.form-check-group {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; /* Change alignment to flex-start */
+    margin-bottom: 10px; /* Add margin to separate checkboxes */
+}
+
+.form-check input {
+    margin-bottom: 5px; /* Adjust margin as needed */
+}
+
+/* SwiftUI-like Stack Styles */
+.hstack {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.vstack {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 10px; /* Adjust margin between button and checkboxes */
 }
 
 @media only screen and (max-width: 620px) {
