--- a/style/style.css
+++ b/style/style.css
@@ -146,7 +146,9 @@ body {
         display: block;
         margin-left: 0 auto;
         margin-right: 0 auto;
-        text-align: center;
+        text-align: center;   
+         width: 80%;
+
 
     }
 }
