--- a/style/style.css
+++ b/style/style.css
@@ -143,7 +143,7 @@ body {
 
     }
     #display {
-        display: block;
+        display: none;
         margin-left: 0 auto;
         margin-right: 0 auto;
         text-align: center;   
